---
source: fmm/src/analysis/cps.rs
expression: "format::format_module(&transform(&Module::new(vec![],\n                        vec![FunctionDeclaration ::\n                            new(\"f\", function_type.clone())], vec![],\n                        vec![create_function_definition(\"g\", vec! [], types ::\n                            Primitive :: Float64, Block ::\n                            new(vec!\n                            [If ::\n                            new(types :: Primitive :: Float64, Primitive ::\n                            Boolean(true), Block ::\n                            new(vec!\n                            [Call ::\n                            new(function_type, Variable :: new(\"f\"), vec!\n                            [Primitive :: Float64(42.0).into()], \"x\",).into()], Branch\n                            ::\n                            new(types :: Primitive :: Float64, Variable :: new(\"x\")),),\n                            Block :: new(vec! [], TerminalInstruction :: Unreachable),\n                            \"y\",).into()], Return ::\n                            new(types :: Primitive :: Float64, ArithmeticOperation ::\n                            new(types :: Primitive :: Float64, ArithmeticOperator ::\n                            Add, Variable :: new(\"y\"), Variable :: new(\"y\"))),),)]),\n                void_type()).unwrap())"
---
(module
  (function g _s _k
    (block
      (if true
        (block
          (load (record-address _s 0) _k_1)
          (load (record-address _s 1) _k_2)
          (call _fmm_stack_align_size (size-of record) _k_3)
          (call _fmm_stack_extend _s _k_3 _k_4)
          (store (record _k) (bit-cast (pointer-address _k_1 _k_2)))
          (call f _s _k_5 42 _k_0)
          (return _k_0))
        (block
          (unreachable))
        )
      (unreachable)))
  (function _k_5 _s x
    (block
      (load (record-address _s 1) _k_7)
      (call _fmm_stack_align_size (size-of record) _k_8)
      (store (- _k_7 _k_8) (record-address _s 1))
      (load (record-address _s 0) _k_9)
      (load (record-address _s 1) _k_a)
      (load (bit-cast (pointer-address _k_9 _k_a)) _k_b)
      (deconstruct-record _k_b 0 _k)
      (call _k _s (+ x x) _k_6)
      (return _k_6)))
  (function _fmm_stack_extend s e
    (block
      (load (record-address s 1) x0)
      (load (record-address s 2) x1)
      (if (> (+ x0 e) x1)
        (block
          (load (record-address s 0) x2)
          (reallocate-heap x2 (* x1 2) x3)
          (store x3 (record-address s 0))
          (store (* x1 2) (record-address s 2))
          (branch (record)))
        (block
          (branch (record)))
        x4)
      (store (+ x0 e) (record-address s 1))
      (return (record))))
  (function _fmm_stack_align_size size
    (block
      (if (== size 0)
        (block
          (branch 0))
        (block
          (branch (* (+ (/ (- size 1) (align-of pointer-integer)) 1) (align-of pointer-integer))))
        x0)
      (return x0))))
